# project-finder

./: .gitignore  Cargo.toml  README.md  justfile
.github/workflows/: ci.yml  publish.yml
benches/: benchmark.rs
benches/common/: mod.rs  setup.rs  utils.rs
benches/fixtures/: snapshot-2025-04-09_09-46-29.csv
benches/scenarios/: basic.rs  edge_cases.rs  mod.rs  specific.rs
scripts/: snapshot
src/: commands.rs  config.rs  dependencies.rs  errors.rs  finder.rs  main.rs  marker.rs
tests/: foo.rs
