[package]
name = "project-finder"
authors = ["Kristofers Solo <dev@kristofers.xyz>"]
version = "0.1.1"
edition = "2024"
description = "Fast project finder for developers"
repository = "https://github.com/kristoferssolo/project-finder"
documentation = "https://docs.rs/project-finder"
homepage = "https://github.com/kristoferssolo/project-finder"
license = "MIT OR Apache-2.0"
keywords = ["cli", "string", "text", "utility"]
categories = ["command-line-utilities"]
exclude = ["/.github", "/.gitignore", "/tests", "*.png", "*.md"]
readme = "README.md"

[dependencies]
anyhow = "1"
clap = { version = "4.5", features = ["derive"] }
futures = "0.3"
regex = "1.11"
thiserror = "2.0"
tokio = { version = "1.44", features = [
  "fs",
  "io-util",
  "macros",
  "process",
  "rt",
  "rt-multi-thread",
  "sync",
] }
tracing = "0.1"
tracing-subscriber = "0.3"
which = "7.0"

[dev-dependencies]
criterion = "0.5"
csv = "1.3"
serde = { version = "1", features = ["derive"] }
tempfile = "3.19"

[lints.clippy]
pedantic = "warn"
nursery = "warn"
unwrap_used = "warn"
expect_used = "warn"

[[bench]]
name = "benchmark"
harness = false
